Archive2/16/86bbb85b88ba52/output
With HAVE_GET_IN_LAYOUT = 0
layout size <> = 0
layout size <int> = 4
layout size <long> = 8
layout size <int,int> = 8
layout size <int,long> = 16
layout size <long,int> = 12
layout size <long,long> = 16
get: 4
-----------------------------
main.cpp:33:43: error: no matching member function for call to 'helper'
  template <typename U> U &get() { return helper<U>(this); }
                                          ^~~~~~~~~
main.cpp:59:60: note: in instantiation of function template specialization 'Layout<0, int, long, long double>::get<long>' requested here
  std::cout << "get: " << Result<int, long, long double>{}.get<long>() << std::endl;
                                                           ^
main.cpp:31:6: note: candidate template ignored: could not match 'long' against 'int'
  U &helper(Layout<X, U, Us...> *c) { return c->value; }
     ^
1 error generated.
